remove NetUtil; code cleanup